--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <script src="https://d3js.org/d3.v7.min.js"></script>        
+        <title>D3 Chart</title>
+    </head>
     <body>
-        <h1>Hello!, I am Atul Tegar</h1>
-        <p>I'm hosted with GitHub Pages.</p>
     </body>
+    <script src="d3chart.js"></script>
 </html>
